--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,8 @@ selenium==4.10.0
 langchain==0.0.246
 tiktoken==0.4.0
 googlesearch-python==1.2.3
-
+transformers==4.31.0
+datasets==2.14.4
+thefuzz==0.19.0
+python-Levenshtein==0.21.1
 # [^\s]([ ]{2,})[\s] --> ==
